cabal-version: 3.0
name: signet
version: 0.2025.5.21
synopsis: Standard Webhooks
description:
  Signet is a Haskell library for working with Standard Webhooks.

category: Web
license: 0BSD
license-file: LICENSE.txt
maintainer: Mercury Technologies, Inc.
extra-doc-files:
  CHANGELOG.md
  README.md

source-repository head
  location: https://github.com/MercuryTechnologies/signet
  type: git

flag pedantic
  default: False
  manual: True

common library
  build-depends:
    base ^>=4.19 || ^>=4.20 || ^>=4.21,
    heck ^>=0.2025.5.22,

  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-deriving-strategies
    -Wno-missing-export-lists
    -Wno-missing-kind-signatures
    -Wno-missing-role-annotations
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe

  if flag(pedantic)
    ghc-options: -Werror

library
  import: library
  build-depends:
    bytestring ^>=0.12,
    case-insensitive ^>=1.2.1.0,
    crypton ^>=0.34 || ^>=1.0.4,
    exceptions ^>=0.10.7,
    http-types ^>=0.12.4,
    memory ^>=0.18.0,
    text ^>=2.0 || ^>=2.1,
    time ^>=1.12.2,

  -- cabal-gild: discover source/library
  exposed-modules:
    Signet
    Signet.Unstable
    Signet.Unstable.Exception.InvalidAsymmetricSignature
    Signet.Unstable.Exception.InvalidAsymmetricSignatureTest
    Signet.Unstable.Exception.InvalidId
    Signet.Unstable.Exception.InvalidIdTest
    Signet.Unstable.Exception.InvalidMessage
    Signet.Unstable.Exception.InvalidMessageTest
    Signet.Unstable.Exception.InvalidPublicKey
    Signet.Unstable.Exception.InvalidPublicKeyTest
    Signet.Unstable.Exception.InvalidSecret
    Signet.Unstable.Exception.InvalidSecretKey
    Signet.Unstable.Exception.InvalidSecretKeyTest
    Signet.Unstable.Exception.InvalidSecretTest
    Signet.Unstable.Exception.InvalidSignature
    Signet.Unstable.Exception.InvalidSignatureTest
    Signet.Unstable.Exception.InvalidSigner
    Signet.Unstable.Exception.InvalidSignerTest
    Signet.Unstable.Exception.InvalidSymmetricSignature
    Signet.Unstable.Exception.InvalidSymmetricSignatureTest
    Signet.Unstable.Exception.InvalidTimestamp
    Signet.Unstable.Exception.InvalidTimestampTest
    Signet.Unstable.Exception.InvalidVerifier
    Signet.Unstable.Exception.InvalidVerifierTest
    Signet.Unstable.Exception.SignetException
    Signet.Unstable.Exception.SignetExceptionTest
    Signet.Unstable.Exception.ToleranceException
    Signet.Unstable.Exception.ToleranceExceptionTest
    Signet.Unstable.Exception.UnknownSignature
    Signet.Unstable.Exception.UnknownSignatureTest
    Signet.Unstable.Exception.VerificationException
    Signet.Unstable.Exception.VerificationExceptionTest
    Signet.Unstable.Extra.Either
    Signet.Unstable.Extra.EitherTest
    Signet.Unstable.Extra.Http
    Signet.Unstable.Extra.HttpTest
    Signet.Unstable.Extra.Maybe
    Signet.Unstable.Extra.MaybeTest
    Signet.Unstable.Type.AsymmetricSignature
    Signet.Unstable.Type.AsymmetricSignatureTest
    Signet.Unstable.Type.Id
    Signet.Unstable.Type.IdTest
    Signet.Unstable.Type.Message
    Signet.Unstable.Type.MessageTest
    Signet.Unstable.Type.Payload
    Signet.Unstable.Type.PayloadTest
    Signet.Unstable.Type.PublicKey
    Signet.Unstable.Type.PublicKeyTest
    Signet.Unstable.Type.Secret
    Signet.Unstable.Type.SecretKey
    Signet.Unstable.Type.SecretKeyTest
    Signet.Unstable.Type.SecretTest
    Signet.Unstable.Type.Signature
    Signet.Unstable.Type.SignatureTest
    Signet.Unstable.Type.Signatures
    Signet.Unstable.Type.SignaturesTest
    Signet.Unstable.Type.Signer
    Signet.Unstable.Type.SignerTest
    Signet.Unstable.Type.SymmetricSignature
    Signet.Unstable.Type.SymmetricSignatureTest
    Signet.Unstable.Type.Timestamp
    Signet.Unstable.Type.TimestampTest
    Signet.Unstable.Type.Tolerance
    Signet.Unstable.Type.ToleranceTest
    Signet.Unstable.Type.Verifier
    Signet.Unstable.Type.VerifierTest
    Signet.UnstableTest
    SignetTest

  hs-source-dirs: source/library

test-suite signet-test-suite
  import: library
  build-depends:
    signet,
    tasty ^>=1.4 || ^>=1.5.3,
    tasty-hunit ^>=0.10.2,
    transformers ^>=0.6.1.0,

  ghc-options:
    -rtsopts
    -threaded

  hs-source-dirs: source/test-suite
  main-is: Main.hs
  type: exitcode-stdio-1.0
